# rctf-scenario2

./: Dockerfile  README.md  launch_script.bash  motd
scenario2-local/: CMakeLists.txt  package.xml
scenario2-local/src/: listener.cpp  talker.cpp
